--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>Data Analyst | Power BI | Excel | SQL Beginner </p>
         <div class="social-links">
             <!--💡UPDATE: Add your social media links and CV file-->
-            <a href="[https://www.linkedin.com/in/j-e-b-/]" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/j-e-b-/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
 
         </div>
     </div>
