--- a/index.html
+++ b/index.html
@@ -144,8 +144,6 @@
                 </div>
                 <ul class="skill-list">
                     <li>Power BI</li>
-                    <li>Tableau</li>
-                    <li>Looker Studio</li>
                     <li>Excel Dashboards</li>
                 </ul>
             </div>
@@ -158,8 +156,8 @@
                 </div>
                 <ul class="skill-list">
                     <li>SQL</li>
-                    <li>Advanced Excel</li>
-                    <li>Python (Pandas)</li>
+                    <li>Microsoft Excel</li>
+                    <li>Microsoft Power BI</li>
                     <li>Google Sheets</li>
                 </ul>
             </div>
@@ -173,7 +171,7 @@
                 <ul class="skill-list">
                     <li>Power Query (M)</li>
                     <li>DAX</li>
-                    <li>Star Schema Design</li>
+                    <li>Pivot Query</li>
                     <li>ETL Processes</li>
                 </ul>
             </div>
@@ -188,7 +186,7 @@
         <h2>Send me a message</h2>
         
         <!--💡UPDATE: Go to formsubmit.co and replace the email with your own-->
-        <form action="https://formsubmit.co/your-email@example.com" method="POST" class="contact-form">
+        <form action="https://formsubmit.co/jebemmab@gmail.com" method="POST" class="contact-form">
             <p> Interested in collaborating or have questions about my work? I'd love to hear from you!</p>
 
             <!-- Form Fields -->
@@ -220,7 +218,7 @@
 <footer>
     <div class="container">
         <!--💡UPDATE: Change the year and your name-->
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 Emmanuel John Bassey. All rights reserved.</p>
     </div>
 </footer>
 
