--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="social-links">
             <!--💡UPDATE: Add your social media links and CV file-->
             <a href="https://www.linkedin.com/in/j-e-b-/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="assets/assets/Emmanuel John Bassey CV.pdf" download title="Download CV"><i class="fas fa-file-arrow-down"></i></a>
+            <a href="assets/Emmanuel John Bassey CV.pdf" download title="Download CV"><i class="fas fa-file-arrow-down"></i></a>
         </div>
     </div>
 </header>
