--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <!--💡UPDATE: Change the image to your own profile photo in assets/images/-->
-            <img src="assets/images/IMG_20251231_175214_127.jpg" alt="Emmanuel John Bassey" class="profile-photo width: 220px; height: 220px; object-fit: cover; border-radius: 16px; /* slight rounded corners */">
+            <img src="assets/images/20251231_180626_0000.png" alt="Emmanuel John Bassey" class="profile-photo width: 220px; height: 220px; object-fit: cover; border-radius: 16px; /* slight rounded corners */">
             <div class="about-text">
                 <!--💡UPDATE: Write your own 'About Me' text here-->
                 <p> I'm a data professional with expertise in transforming complex datasets into actionable insights. My work focuses on creating interactive visualizations and data-driven stories that help organizations make informed decisions.</p>
