--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <!--💡UPDATE: Add a preview image of your project to assets/images/ -->
                 <img src="assets/images/IMG-20251231-WA0010.jpg" alt="Project One Preview">
                 <div class="project-card-content">
-                    <h3>Project Title One</h3>
-                    <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
+                    <h3>Customer Churn Analysis – Banking Dataset</h3>
+                    <p>This dashboard presents a churn analysis of 10,000 bank customers, with an overall churn rate of 20.4%. The insights reveal clear patterns across branches, tenure, age, credit score, balance range, and gender.</p>
                     <div class="project-buttons">
                         <!--💡UPDATE: Add link to your project's code/documentation on GitHub-->
                         <a href="[YOUR_GITHUB_PROJECT_URL]" target="_blank" class="btn">Documentation</a>
