--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p>This dashboard presents a churn analysis of 10,000 bank customers, with an overall churn rate of 20.4%. The insights reveal clear patterns across branches, tenure, age, credit score, balance range, and gender.</p>
                     <div class="project-buttons">
                         <!--💡UPDATE: Add link to your project's code/documentation on GitHub-->
-                        <a href="[YOUR_GITHUB_PROJECT_URL]" target="_blank" class="btn">Documentation</a>
+                        <a href="[https://github.com/users/iamjeb01/projects/1]" target="_blank" class="btn">Documentation</a>
                         <!--💡UPDATE: Add link to your live dashboard (e.g., Power BI, Tableau Public)-->
                         <a href="[YOUR_LIVE_DASHBOARD_URL]" target="_blank" class="btn btn-secondary">View Dashboard</a>
                     </div>
